# Embla_System

./: .gitattributes  .gitignore  =1.63.0  LICENSE-CLOSED-SOURCE  NagaAgent_游戏视觉交互与攻略融合_产品文档.md  README.md  README_en.md  README_tw.md  TEST_GUIDE_GAME_GUIDE.md  build.md  build.py  clear.py  config.json.example  embla-backend.spec  embla_system.yaml  main.py  main.spec  naga-backend.spec  package-lock.json  pyproject.toml  requirements.txt  setup.py  setup_venv.bat  start.bat  start_with_tray.command  task_codex_phase0.txt  test_openclaw_reply.sh  update.bat  update.py  update.sh
Embla_core/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
agents/: __init__.py  contract_runtime.py  core_agent.py  dev_agent.py  expert_agent.py  llm_gateway.py  meta_agent.py  pipeline.py  prompt_engine.py  review_agent.py  router_engine.py  shell_agent.py  shell_tools.py  tool_loop.py
agentserver/: OPENCLAW_FLOW.md  README.md  __init__.py  agent_manager.py  agent_server.py  config.py  task_scheduler.py
apiserver/: README.md  __init__.py  _shared.py  agentic_tool_loop.py  api_server.py  context_compressor.py  llm_service.py  message_manager.py  naga_auth.py  native_tools.py  response_util.py  routes_brainstem.py  routes_chat.py  routes_ops.py  start_server.py  streaming_tool_extractor.py
autonomous/: __init__.py  contract_negotiation.py  dispatcher.py  evaluator.py  gc_pipeline.py  llm_gateway.py  meta_agent_runtime.py  monitor.py  planner.py  router_arbiter_guard.py  router_engine.py  scaffold_engine.py  scaffold_verify_pipeline.py  sensor.py  state_machine.md  system_agent.py  types.py  working_memory_manager.py  ws22_longrun_baseline.py  ws22_release_gate.py  ws23_release_gate.py  ws24_release_gate.py  ws25_event_gc_quality_baseline.py  ws25_release_gate.py  ws26_release_gate.py  ws27_longrun_endurance.py
config/: autonomous_runtime.yaml  retrieval_budget.yaml
core/: __init__.py
doc/: 00-conflict-resolution-plan.md  00-conflict-resolution-summary.md  00-mvp-architecture-design.md  00-omni-operator-architecture.md  01-module-overview.md  02-module-archive.md  03-qt-migration-assessment.md  04-api-protocol-proxy-guide.md  05-dev-startup-and-index.md  06-structured-tool-calls-and-local-first-native.md  07-archived-autonomous-agent-sdlc-architecture.md  07-autonomous-agent-sdlc-architecture.md  08-frontend-backend-separation-plan.md  09-tool-execution-specification.md  09-工具调用与任务执行规范.md  10-brainstem-layer-modules.md  11-brain-layer-modules.md  12-limbs-layer-modules.md  13-security-blindspots-and-hardening.md  14-multi-agent-architecture.md  15-boxlite-first-execution-sandbox-architecture.md  16-os-sandbox-default-execution-architecture.md  Multi Agent Target Architecture  Multi Agent Target Architecturev2.1.md  README.md  embla-core-ui-design-spec.md  frontend-refactor-plan.md  gemin-结构图.md  task-autonomous-skeleton.md  架构与时序设计.md
frontend/: electron-builder.yml  eslint.config.js  index.html  main.py  package-lock.json  package.json  tsconfig.app.json  tsconfig.electron.json  tsconfig.json  vite.config.ts
game/: config.json.example  full_flow_test.py
guide_engine/: __init__.py  calculation_service.py  chroma_service.py  gamedata_loader.py  guide_service.py  kantai_calculation_service.py  models.py  neo4j_service.py  prompt_manager.py  query_router.py  rag_utils.py  screenshot_provider.py
hooks/: hook-OpenGL.py  rthook-opengl.py
mcpserver/: __init__.py  mcp_manager.py  mcp_registry.py  mcp_scheduler.py  mcp_server.py  plugin_manifest_policy.py  plugin_worker.py  plugin_worker_runtime.py
memory/: schema.sql
mqtt_tool/: device_switch.py
nagaagent_core/: __init__.py  cli.py  qt.py
package/: README.md  __init__.py  build_all.py  build_macos.py  build_windows.py
policy/: gate_policy.yaml  role_executor_semantic_guard.spec  slot_policy.yaml
runbooks/: incident.md  rollback.md
scripts/: README.md  audit_task_status_drift.py  build-all.sh  build-backend.sh  build-win.py  build_boxlite_runtime_image.py  canary_rollback_drill.py  chaos_lock_failover.py  chaos_ws22_scheduler_longrun.py  check_legacy_shim_imports_ws28_030.py  clean_checkout_dual_track.py  codex_doc_audit_prompt.md  config_migration_ws16_004.py  context_benchmark.py  daily_checkpoint_ws19_007.py  desktop_release_compat_ws20_006.py  dod_check.ps1  embla_core_release_compat_gate.py  event_replay_ws18_003.py  export_brainstem_service_template_ws18_008.py  export_killswitch_oob_bundle_ws23_004.py  export_slo_snapshot.py  export_ws26_runtime_snapshot_ws26_002.py  fix_pytest_config.py  generate_phase3_full_release_report_ws27_006.py  manage_brainstem_control_plane_ws28_017.py  manage_ws27_72h_wallclock_acceptance_ws27_001.py  manage_ws27_subagent_cutover_ws27_002.py  mcp_stdio_smoketest.py  migrate_events_jsonl_to_db_ws29_006.py  migrate_remove_guide_engine_config_ws29_003.py  patch_pytest_config.py  prepare_boxlite_runtime.py  prepare_openclaw_runtime.py  register_role_executor_semantic_guard_change_ws28_021.py  release_closure_chain_full_m0_m12.py  release_closure_chain_full_m0_m7.py  release_closure_chain_m0_m5.py  release_closure_chain_m10_ws25_006.py  release_closure_chain_m11_ws26_006.py  (+50 more)
sessions/: afd9836d-1b04-4a20-9df4-60a78177c136.json
storage_schema/: README.md  brainstem_event_workflow.sql
summer_memory/: embedding_openai_compat.py  graph.py  main.py  memory_client.py  memory_manager.py  quintuple_extractor.py  quintuple_graph.py  quintuple_rag_query.py  quintuple_visualize.py  readme.md  task_manager.py  visualize.py
system/: README.md  _dev_grep.py  (+46 more)
(+935 files in other folders)
