[project]
name = "nagaagent"
version = "5.0.0"
description = "NagaAgent 5.0 - 智能对话助手，支持多MCP服务、流式语音交互、GRAG知识图谱记忆系统、RESTful API接口、控制台托盘功能"
authors = [
    {name = "柏斯阔落", email = "1781393885@qq.com"},
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    # ---------- 核心 / 配置 ----------
    "charset-normalizer>=3.4.0",
    "json5>=0.9.0",
    "PyYAML>=6.0.2",
    "pydantic>=2.11.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.22",
    # ---------- Web 服务 ----------
    "fastapi>=0.115.0",
    "uvicorn>=0.34.0",
    "sse-starlette>=2.3.0",
    "httpx[socks]>=0.28.0",
    "websockets>=15.0",
    # ---------- LLM / 对话 ----------
    "openai>=2.8.0",
    "litellm>=1.80.0",
    "tiktoken>=0.11.0",
    "langchain-openai>=1.1.0",
    "langchain-community>=0.3.30",
    # ---------- 异步 / 任务 ----------
    "aiohttp>=3.12.0",
    "aiofiles>=24.1.0",
    "APScheduler>=3.11.0",
    # ---------- 系统 / 工具 ----------
    "numpy>=2.2.0",
    "pandas>=2.2.0",
    "pillow>=11.0.0",
    "psutil>=7.1.0",
    "emoji>=2.14.0",
    "cryptography>=46.0.0",
    "setproctitle>=1.3.5",
    "watchfiles>=1.0.0",
    # ---------- 语音 / 音频 ----------
    "edge-tts>=7.0.0",
    "sounddevice>=0.5.0",
    # ---------- 知识图谱 GRAG / 兼容层 ----------
    "Flask>=3.1.0",
    "gevent>=25.0.0",
    "py2neo>=2021.2.3",
    "neo4j>=5.0.0",
    "chromadb>=0.5.0",
    "mss>=10.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["apiserver", "agentserver", "summer_memory", "thinking", "ui", "voice"]

[tool.ruff]
line-length = 120

[dependency-groups]
build = [
    "pyinstaller>=6.18.0",
]
test = [
    "google-genai>=1.63.0",
]
